dialog paddings corrected and overflow hidden

--- a/styles.css
+++ b/styles.css
@@ -147,11 +147,9 @@ dialog {
   color: #fff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  overflow: hidden;
   > h2 {
-    align-self: flex-start;
-    padding: 0 40px 30px;
+    padding: 0 50px 30px;
     text-transform: uppercase;
     text-decoration: underline;
     text-decoration-color: #c6c7c8;
@@ -172,9 +170,12 @@ dialog {
   }
   > video {
     width: 90%;
+    padding: 0 50px 0;
+    justify-self: center;
   }
   > div {
     width: 90%;
+    padding: 0 50px 0;
     > img {
       width: 100%;
       object-fit: cover;
@@ -182,6 +183,7 @@ dialog {
   }
   > p {
     width: 90%;
+    padding: 0 50px 0;
     line-height: 2;
     font-size: 1rem;
   }
